--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Happy Birthday Boho!</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/bootstrap.min.css" />
     </head>
     <body class="text-center">
         <!--All photos should be less than 1000 KB-->
@@ -11,17 +12,18 @@
         <div id="contents" class="parallax">
             <div class="flex parallax splash-slide">
                 <!--Place it above the splash-slide0 and splash-slide1 divs-->
-                <h1>Hi Boho!</h1>
-                <h3>Oh look! It's your Monday-ane birthday!</h3>
+                <h1>Title!!</h1>
+                <h3>Sub-title comes here...</h3>
+                <p>Different photos for desktop and mobile phones</p>
             </div>
             <div class="parallax flex paint-slide">
                 <!--A backgroud image of butter knife with paint-->
-                <p>Thank you for telling me ways to make paintings.</p>
+                <p>Loren ipsum dim sum. Komitet.</p>
             </div>
             <div class="parallax flex painting-slide">
                 <!--The main painting as a background-->
-                <p>Obviously, the painting. The badness is completely on me.</p>
-                <p>But it's the people interpretation that is just marvelous</p>
+                <p>Paragraphs can have multiple lines in them.</p>
+                <p>Two paragraphs will be places vertically</p>
                 <!--Add a dynamic style for mobile view-->
             </div>
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -36,45 +38,45 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="images/painting-waist.jpg">
+                        <img class="d-block w-100" src="images/blue.png">
                         <div class="carousel-caption d-none d-md-block">
-                                <h5>Is she pregnent? Why is she blue?</h5>
-                                <p>Meghna Khaitan</p>
+                                <h5>Some text comes here</h5>
+                                <p>Lorem</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="images/painting-bag.jpg">
+                        <img class="d-block w-100" src="images/blue-mobile.png">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>A dead body in the sack below with it's hand coming out!</h5>
-                            <p>Muttu</p>
+                            <h5>Some text comes here</h5>
+                            <p>Lorem</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="images/painting-waist.jpg">
+                        <img class="d-block w-100" src="images/red.png">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>I like her ass</h5>
-                            <p>Girish Pooplaani</p>
+                            <h5>Some text comes here</h5>
+                            <p>Lorem</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="images/painting-hand.jpg">
+                        <img class="d-block w-100" src="images/red-mobile.png">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Is she dragging her dog? Wtf! She is a banjaran and she has a phone?</h5>
-                            <p>My youngest Chachu</p>
+                            <h5>Some text comes here</h5>
+                            <p>Lorem</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="images/painting-waist.jpg">
+                        <img class="d-block w-100" src="images/green.png">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Is it fat or is it potli?</h5>
-                            <p>Rash With A Rai</p>
+                            <h5>Some text comes here</h5>
+                            <p>Lorem</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="images/painting-hand.jpg">
+                        <img class="d-block w-100" src="images/green-mobile.png">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Technology connecting even the most remote people.</h5>
-                            <p>Anika with an S</p>
+                            <h5>Some text comes here</h5>
+                            <p>Lorem</p>
                         </div>
                     </div>
                 </div>
@@ -88,47 +90,41 @@
                 </a>
             </div>
             <div class="parallax flex dadi-nebulizer">
-                <!--Dadi nebulizer as the background-->
-                <p>I know you've been through a lot. And you have so many physical problems</p>
+                <p>Some text comes here</p>
             </div>
             <div class="parallax flex dadi-yo">
-                <p>Look at her greeting you!</p>
+                <p>Some text comes here</p>
             </div>
             <div class="parallax flex roster-slide">
-                <!--May roster-->
-                <p>If it helps, this is my roster for the month of May.</p>
-                <h1>So f-ing colourful</h1>
-                <p>And I got hair loss problems</p>
+                <p>Maybe, place some longer text here</p>
+                <h1>Highlight on this text</h1>
+                <p>Some text comes here</p>
             </div>
             <div class="parallax flex lti-slide0">
-                <!--video background of LTI water problem-->
-                <!--Or just a screenshot of the main content-->
-                <p>Look at how bad the water here is sometimes.</p>
-                <p>I guess Mira Road people find similar problems everywhere</p>
+                <p>Some text comes here</p>
+                <p>Longer text comes here. Longer that almost everything.</p>
             </div>
             <div class="parallax flex lti-slide1">
-                <!--LTI cabs-->
-                <p>But, we have amazing cabs</p>
+                <p>Some text comes here</p>
             </div>
             <div class="parallax flex pubby-slide0">
-                <p>Look at what Pubby was wearing when making a gift for you.</p>
+                <p>Some text comes here</p>
             </div>
             <div class="parallax flex pubby-slide1">
-                <!--Red mark encircling the main content-->
-                <p>If you didn't notice</p>
+                <p>See the parallax effect</p>
             </div>
             <div class="parallax flex chocolate-slide">
-                <p>Thanks for telling about the <a href="https://www.youtube.com/watch?v=_SsUTLAhbWE">best video</a> in the world.</p>
-                <sub>This link is safe to click</sub><br/>
-                <sub><a href="https://shockchan.com/2-girls-1-cup-video/">This isn't</a></sub>
+                <p>Some text comes here</p>
+                <sub>This text is small</sub><br/>
+                <sub>This too</sub>
             </div>
             <div class="parallax flex last-slide">
-                <h1>In the end...</h1>
-                <p>Thank you for being.</p>
-                <p>Miss you. Love you, still!</p><h2>&#x1F918&#x1F3FC</h2> <!--Rock on emoticon-->
+                <h1>The Ends<h1>
+                <p>Some text comes here</p>
+                <p>Support for UTF-8 charset</p><h2>&#x1F918&#x1F3FC</h2> <!--Rock on emoticon-->
                 <p>
                     <small>
-                        Also, thanks to Vandita. If it wasn't her birthday on 8th, I wouldn't have found the plans and motivation in making this gift!
+                        This text is small.
                     </small>
                 </p>
             </div>
@@ -148,7 +144,6 @@
         }
     </script>
     <script src = "js/jquery.min.js" ></script>
-    <!--script src = "js/popper.min.js"></script-->
     <script src = "js/bootstrap.min.js"></script>
     </body>
 </html>
